--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "convex": "1.7.1",
+    "openai": "^4.24.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
